update readme and some details

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
     rel="stylesheet">
-  <title>Frontend Mentor | Blog preview card</title>
+  <title>Blog preview card</title>
 
 </head>
 
@@ -32,19 +32,21 @@
 
     <span class="tag">Learning</span>
 
-    <h5>Published 21 Dec 2023</h5>
+    <h5>Published 20 Mar 2025</h5>
 
-    <h2>HTML & CSS foundations</h2>
+    <a href="#">
+      <h2>HTML & CSS foundations</h2>
+    </a>
 
     <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
     <div class="author">
       <img src="assets/images/image-avatar.webp"
         alt="">
-      Greg Hooper
+      Mehrad Jafari
     </div>
 
-    
+
   </main>
 
 </body>
